argocd/manifests/alist/base/middleware-logout.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: alist-logout
  namespace: alist
spec:
  headers:
    customRequestHeaders:
      Client-Id: ""
