argocd/manifests/alist/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alist
  namespace: alist
  labels:
    app.kubernetes.io/name: alist
spec:
  selector:
    app.kubernetes.io/name: alist
  ports:
    - name: http
      port: 5244
      targetPort: http
      protocol: TCP
