argocd/manifests/alist/base/ingress-logout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alist-logout
  namespace: alist
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: alist-alist-logout@kubernetescrd
    external-dns.alpha.kubernetes.io/target: k3s-prod.levangie.dev
spec:
  ingressClassName: traefik
  rules:
    - host: alist.levangie.dev
      http:
        paths:
          - path: /api/auth/logout
            pathType: Exact
            backend:
              service:
                name: alist
                port:
                  number: 5244
